# cppstreams

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/cppstreams/: abstractbufferedinputstream.cpp  abstractbufferedinputstream.h  abstractbufferedoutputstream.cpp  abstractbufferedoutputstream.h  abstractencryptedstream.cpp  abstractencryptedstream.h  abstractfileinputstream.cpp  abstractfileinputstream.h  abstractfileoutputstream.cpp  abstractfileoutputstream.h  abstractfilestream.cpp  abstractfilestream.h  abstractsocketinputstream.cpp  abstractsocketinputstream.h  abstractsocketoutputstream.cpp  abstractsocketoutputstream.h  abstractsocketstream.cpp  abstractsocketstream.h  bufferedinputstream.cpp  bufferedinputstream.h  bufferedoutputstream.cpp  bufferedoutputstream.h  bufferedstream.cpp  bufferedstream.h  encryptedinputstream.cpp  encryptedinputstream.h  encryptedoutputstream.cpp  encryptedoutputstream.h  encryptedstream.cpp  encryptedstream.h  fileinputstream.cpp  fileinputstream.h  fileoutputstream.cpp  fileoutputstream.h  filestream.cpp  filestream.h  iasyncinputstream.h  iasyncoutputstream.h  iasyncstream.h  iinputstream.h  (+13 more)
src/cppstreams/bufferedstreams/: asyncbufferedinputstream.cpp  asyncbufferedinputstream.h  asyncbufferedoutputstream.cpp  asyncbufferedoutputstream.h  asyncbufferedstream.cpp  asyncbufferedstream.h  bufferedinputstream.cpp  bufferedinputstream.h  bufferedoutputstream.cpp  bufferedoutputstream.h  bufferedstream.cpp  bufferedstream.h
src/cppstreams/bufferedstreams/abstracts/: abstractasyncbufferedinputstream.cpp  abstractasyncbufferedinputstream.h  abstractasyncbufferedoutputstream.cpp  abstractasyncbufferedoutputstream.h  abstractbufferedinputstream.cpp  abstractbufferedinputstream.h  abstractbufferedoutputstream.cpp  abstractbufferedoutputstream.h  abstractsyncbufferedinputstream.cpp  abstractsyncbufferedinputstream.h  abstractsyncbufferedoutputstream.cpp  abstractsyncbufferedoutputstream.h
src/cppstreams/encryptedstreams/: asyncencryptedinputstream.cpp  asyncencryptedinputstream.h  asyncencryptedoutputstream.cpp  asyncencryptedoutputstream.h  asyncencryptedstream.cpp  asyncencryptedstream.h  encryptedinputstream.cpp  encryptedinputstream.h  encryptedoutputstream.cpp  encryptedoutputstream.h  encryptedstream.cpp  encryptedstream.h
src/cppstreams/encryptedstreams/abstracts/: abstractencryptedstream.cpp  abstractencryptedstream.h
src/cppstreams/filestreams/: asyncfileinputstream.cpp  asyncfileinputstream.h  asyncfileoutputstream.cpp  asyncfileoutputstream.h  asyncfilestream.cpp  asyncfilestream.h  fileinputstream.cpp  fileinputstream.h  fileoutputstream.cpp  fileoutputstream.h  filestream.cpp  filestream.h
src/cppstreams/filestreams/Abstracts/: abstractasyncfileinputstream.cpp  abstractasyncfileinputstream.h  abstractasyncfileoutputstream.cpp  abstractasyncfileoutputstream.h  abstractfileinputstream.cpp  abstractfileinputstream.h  abstractfileoutputstream.cpp  abstractfileoutputstream.h  abstractfilestream.cpp  abstractfilestream.h
src/cppstreams/filestreams/abstracts/: abstractfileinputstream.cpp  abstractfileoutputstream.cpp
src/cppstreams/socketstreams/: asyncsocketinputstream.cpp  asyncsocketinputstream.h  asyncsocketoutputstream.cpp  asyncsocketoutputstream.h  asyncsocketstream.cpp  asyncsocketstream.h  socketinputstream.cpp  socketinputstream.h  socketoutputstream.cpp  socketoutputstream.h  socketstream.cpp  socketstream.h
src/cppstreams/socketstreams/abstracts/: abstractasyncsocketinputstream.cpp  abstractasyncsocketinputstream.h  abstractasyncsocketoutputstream.cpp  abstractasyncsocketoutputstream.h  abstractsocketinputstream.cpp  abstractsocketinputstream.h  abstractsocketoutputstream.cpp  abstractsocketoutputstream.h  abstractsocketstream.cpp  abstractsocketstream.h
test/: CMakeLists.txt
test/src/: filestreamtest.cpp
